# BAVDFS

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cluster/: CMakeLists.txt.bk
src/common/: CMakeLists.txt.bk
src/database/: CMakeLists.txt.bk
src/httpserver/: CMakeLists.txt  http_server.cpp
src/include/: CMakeLists.txt
src/include/common/: constants.h
src/include/httpserver/: http_server.h
src/include/index/: faiss_index.h  hnswlib_index.h  index_factory.h
src/include/logger/: logger.h
src/index/: CMakeLists.txt  faiss_index.cpp  hnswlib_index.cpp  index_factory.cpp
src/logger/: CMakeLists.txt  logger.cpp
test/: CMakeLists.txt  test.0.0.1.sh  test.0.0.2.sh  test.sh
tools/: CMakeLists.txt
tools/server/: CMakeLists.txt  vdb_server.cpp
